feat(geometry): add first geometry generator

--- a/example/index.html
+++ b/example/index.html
@@ -1,9 +1,16 @@
 <html>
-    <title>Example</title>
-    <body>
-        <div id="test">
-            
-        </div>
-        <script src="./dist/index.js"></script>
-    </body>
+  <title>Example</title>
+  <body>
+    <style>
+      #canvas {
+        position: fixed;
+        top: 0;
+        left: 0;
+      }
+    </style>
+    <div id="test">
+      <canvas id="canvas"></canvas>
+    </div>
+    <script src="./dist/index.js"></script>
+  </body>
 </html>
