feat(global): first functionnal implementation

--- a/example/index.html
+++ b/example/index.html
@@ -10,7 +10,9 @@
     </style>
     <div id="test">
       <canvas id="canvas"></canvas>
+      <img src="./dist/font/font.png" alt="">
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.143.0/three.min.js"></script>
     <script src="./dist/index.js"></script>
   </body>
 </html>
