--- a/demo/static/index.html
+++ b/demo/static/index.html
@@ -10,9 +10,8 @@
     </style>
     <div id="test">
       <canvas id="canvas"></canvas>
-      <img src="./dist/font/font.png" alt="">
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.143.0/three.min.js"></script>
-    <script src="./dist/index.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
