--- a/demo/static/basic.html
+++ b/demo/static/basic.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Example basic</title>
+    <title>Example basic | three-msdf-text</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.143.0/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/tweakpane@3.1.0/dist/tweakpane.min.js"></script>
     <link rel="stylesheet" href="./index.css" />
