--- a/demo/static/stroke.html
+++ b/demo/static/stroke.html
@@ -1,9 +1,9 @@
 <html>
   <head>
-    <title>Example stroke</title>
+    <title>Example stroke | three-msdf-text</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.143.0/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/tweakpane@3.1.0/dist/tweakpane.min.js"></script>
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
     <canvas id="canvas"></canvas>
